<resources>
    <string name="app_name">FoodPark</string>
    <string name="txtslogan">Deliciousness jumping into the mouth</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_exit_text">Are you sure you want to exit?</string>
    <string name="hint_serach_bar">Enter your Food</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="login_text">log in with your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_profile_password">Password</string>
    <string name="_12345">12345</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_surname">SurName</string>
    <string name="hint_first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="filter_reset">RESET</string>
    <string name="checked_filter">Filter</string>
    <string name="filter_finished">Finished</string>
    <string name="single">\u20B9</string>
    <string name="doublerupess">\u20B9\u20B9</string>
    <string name="triple">\u20B9\u20B9\u20B9</string>
    <string name="four">\u20B9\u20B9\u20B9\u20B9</string>
    <string name="categories_title">title</string>
    <string name="top_categories">Top Categories</string>
    <string name="more_categories">More Categories</string>
    <string name="search_hint">Search for a restaurant or dish</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="free_food">Free Food</string>
    <string name="promotions">Promotions</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="edit">EDIT</string>
    <string name="account_information">Account Information</string>
    <string name="saved_places">saved Places</string>
    <string name="address_home">Home</string>
    <string name="address_work">Work</string>
    <string name="add_home">Add home</string>
    <string name="add_work">Add work</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_name">FIRST NAME</string>
    <string name="surname">SURNAME</string>
    <string name="email">EMAIL</string>
    <string name="hi_phone_number">PHONE NUMBER</string>
    <string name="edit_account">Edit account</string>
    <string name="profile_first_name">First name</string>
    <string name="password">Password</string>
    <string name="profile_phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="profile_surname">Surname</string>
    <string name="update">Update</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_your_pasword">Forget Your Pasword?</string>
    <string name="message_forget">Enter your Phone Number and we\'ll send you a message to Mobile Number (Charges may apply)</string>
    <string name="reset">Reset</string>
    <string name="enter_otp_number">Enter Otp Number</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="confirm">Confirm</string>
    <string name="reset_your_password">Reset Your Password?</string>
    <string name="please_enter_the_otp_to_verify_your_account">Please Enter the OTP to verify your Account</string>
    <string name="office_address">Office Address</string>
    <string name="home_address">Home Address</string>
    <string name="hi_nice_to_meet_you">Hi,nice to meet you</string>
    <string name="location_second_line">Give us your location to find places that deliver to you</string>
    <string name="use_current_location">Use current location</string>
    <string name="location_text">We only access location while you are using the app to improve your order experience</string>
    <string name="or_select_your_location_manuvally">or select your location manuvally</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="food_name">Food Name</string>
    <string name="items_in_cart">Items in cart</string>
    <string name="_140_00">$140.00</string>
    <string name="plus_taxes">plus taxes</string>
    <string name="restaurants_name">Restaurants Name </string>
    <string name="address">Address</string>
    <string name="checkout">Checkout</string>
    <string name="_10_000">$10,000</string>
    <string name="total">Total : </string>
    <string name="subtotal">Subtotal</string>

    <string-array name="countryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>


</resources>
