<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/fp_tv_reset_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/magettas_light"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/reset_your_password"
                    android:textColor="@color/colorCoffee"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fp_tv_reset_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fp_tv_reset_text"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/magettas_light"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:maxLines="2"
                    android:text="@string/please_enter_the_otp_to_verify_your_account"
                    android:textAlignment="center"
                    android:textColor="@color/colorCoffee"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fp_tv_reset_message"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/forget_rectangular_background_line"
                    android:hint="@string/enter_otp_number"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:theme="@style/TextLabel" />

                <EditText
                    android:id="@+id/et_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_otp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/forget_rectangular_background_line"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_change_password"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/forget_rectangular_background_line"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGreen"
                    android:fontFamily="@font/verdana"
                    android:shadowColor="@android:color/black"
                    android:text="@string/reset"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGreen"
                    android:fontFamily="@font/verdana"
                    android:shadowColor="@android:color/black"
                    android:text="@string/confirm"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>


