<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context="com.foodpark.auth.SignInActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fp_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fp_signin_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:theme="@style/SearchViewStyle">

            <ImageView
                android:id="@+id/fp_tv_toolbar_back"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/fp_tv_toolbar_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_app_bar"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/login_text"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:fontFamily="@font/verdana"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:gravity="start"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:cursorVisible="false"
                    android:textCursorDrawable="@color/colorCoffee"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/screenBackground" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:cursorVisible="false"
                    android:textCursorDrawable="@color/colorCoffee"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_signin_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorGreen"
            android:fontFamily="@font/verdana"
            android:shadowColor="@android:color/black"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/fp_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorGreen"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/magettas_regular"/>
    </LinearLayout>


    <TextView
        android:id="@+id/fp_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/login_register"
        android:textAllCaps="true"
        android:textColor="@color/colorCoffee"
        android:textSize="15sp"
        android:fontFamily="@font/magettas_regular"
        android:background="@drawable/rectangular_background_line"
        />

</RelativeLayout>
