<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5DFFFFFF">

    <LinearLayout
        android:id="@+id/fp_ll_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/favourite" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:fontFamily="@font/verdana"
            android:padding="5dp"
            android:text="@string/your_favourites"
            android:textAllCaps="true"
            android:textColor="@color/colorProfile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fp_ll_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_ll_fav"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/payment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:fontFamily="@font/verdana"
            android:padding="5dp"
            android:text="@string/payment"
            android:textAllCaps="true"
            android:textColor="@color/colorProfile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fp_ll_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_ll_payment"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/help" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:fontFamily="@font/verdana"
            android:padding="5dp"
            android:text="@string/help"
            android:textAllCaps="true"
            android:textColor="@color/colorProfile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fp_ll_freefood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_ll_help"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/freefood" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:fontFamily="@font/verdana"
            android:padding="5dp"
            android:text="@string/free_food"
            android:textAllCaps="true"
            android:textColor="@color/colorProfile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fp_ll_promotions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_ll_freefood"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/promotion" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:fontFamily="@font/verdana"
            android:padding="5dp"
            android:text="@string/promotions"
            android:textAllCaps="true"
            android:textColor="@color/colorProfile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fp_ll_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_ll_promotions"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:fontFamily="@font/verdana"
            android:padding="5dp"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/colorProfile"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>