<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.FPForgetPasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fp_forget_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fp_forget_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:theme="@style/SearchViewStyle">

            <ImageView
                android:id="@+id/fp_forget_toolbar_back"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/back_arrow" />

            <TextView
                android:id="@+id/fp_forget_toolbar_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_forget_app_bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/password" />

    <TextView
        android:id="@+id/fp_tv_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock"
        android:fontFamily="@font/magettas_light"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/forget_your_pasword"
        android:textColor="@color/colorCoffee"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fp_tv_forget_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_tv_forget"
        android:layout_margin="5dp"
        android:fontFamily="@font/magettas_light"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:maxLines="2"
        android:text="@string/message_forget"
        android:textAlignment="center"
        android:textColor="@color/colorCoffee"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorGreen"
        android:fontFamily="@font/verdana"
        android:shadowColor="@android:color/black"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />


    <EditText
        android:id="@+id/et_forget_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fp_tv_forget_message"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget_rectangular_background_line"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:theme="@style/TextLabel" />

</RelativeLayout>